--- a/index.html
+++ b/index.html
@@ -113,9 +113,102 @@
 </style>
 
 
+
+  <style>
+    /* Notification bar style */
+    #notification-bar {
+      position: fixed;
+      top: -50px; /* Initially hidden above the page */
+      left: 0;
+      width: 100%;
+      background-color: #4CAF50; /* Green color */
+      color: white;
+      padding: 10px 0;
+      text-align: center;
+      font-size: 18px;
+      z-index: 1000;
+      transition: top 0.5s ease-in-out; /* Smooth transition for slide down */
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    /* Download button style */
+    #notification-bar button {
+      background-color: #1C8F1D;
+      color: white;
+      padding: 8px 15px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      font-size: 16px;
+      margin: 0 10px;
+    }
+
+    /* Close button style */
+    #close-btn {
+      background-color: #f44336; /* Red */
+      padding: 8px 10px;
+      border: none;
+      color: white;
+      border-radius: 50%;
+      font-size: 14px;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+
+    /* Button hover effects */
+    #notification-bar button:hover {
+      opacity: 0.9;
+    }
+  </style>
+
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
+  <!-- Notification Bar -->
+  <div id="notification-bar">
+    <span>Download our app now for quick access!</span>
+    <div>
+      <button id="download-btn">Download</button>
+      <button id="close-btn">&times;</button>
+    </div>
+  </div>
+  
+  
+   <script>
+    // Display the notification bar when the page loads
+    window.onload = function() {
+      const notificationBar = document.getElementById('notification-bar');
+      const downloadButton = document.getElementById('download-btn');
+      const closeButton = document.getElementById('close-btn');
+
+      // Slide down the notification bar
+      notificationBar.style.top = '0px';
+
+      // Add click event listener for the "Download" button
+      downloadButton.addEventListener('click', function () {
+        const apkUrl = 'downloads/your-app.apk';  // Path to APK file on your server
+
+        // Trigger the APK download
+        const anchor = document.createElement('a');
+        anchor.href = apkUrl;
+        anchor.download = 'your-app.apk'; // Optional: set a custom file name
+        document.body.appendChild(anchor);
+        anchor.click();
+        document.body.removeChild(anchor);
+      });
+
+      // Add click event listener for the "Close" button
+      closeButton.addEventListener('click', function () {
+        notificationBar.style.top = '-50px'; // Slide the notification bar up (hide it)
+      });
+    };
+  </script>
+
+
+
+
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
